# model-generation

./: .gitignore  49605768_README.md  Ollama.Dockerfile  batch.jsonl  batch_id.txt  batch_results.jsonl  chat_gpt_api_test.py  docker-compose.yml  experiments.json  requirements.txt
evaluation_analysis/: analyze_evaluation_csv_files.py
games/: games.toml
games/1_dice_game/: requirements.csv  requirements_smelly.csv
games/2_arkanoid/: requirements.csv  requirements_smelly.csv
games/3_snake/: requirements.csv  requirements_smelly.csv
games/4_scopa/: 49605657_requirements_smelly.csv  requirements.csv
games/5_pong/: 49605684_requirements_smelly.csv  requirements.csv
ground_truths/1_dice_game/: plant_uml.txt
ground_truths/2_arkanoid/: plant_uml.txt
ground_truths/3_snake/: plant_uml.txt
ground_truths/4_scopa/: plant_uml.txt
ground_truths/5_pong/: plant_uml.txt
ground_truths/arkanoid/: plant_uml.txt
ground_truths/dice_game/: plant_uml.txt
ground_truths/pong/: plant_uml.txt
ground_truths/snake/: plant_uml.txt
helpers/: __init__.py  gpt.py
llm-request-code/: .env.example  49605708_README.md  main.py  pyproject.toml
llm-request-code/experiments/: new_experiments_def.py  workflow_defs.py
llm-request-code/req_smell_tracing/: experiment.py  game.py  llm.py  result.py  tracing.py  workflow.py
llm-request-code/req_smell_tracing/requirements/: requirement.py  smell.py
llm-request-code/tests/: test_experiment.py  test_tracing.py
prompts/: system_prompt_guidelines.txt  user_prompt.txt
(+105 files in other folders)
